# qiulao

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  debug_resume.md  deployment.md  docker-compose.yml  example_job_hc.txt  example_resume.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt  test_ci.py  test_pipeline.py  test_resume.md
.github/workflows/: deploy.yml
app/: main.py
app/api/: keyword_extractor.py  optimization.py  resume_editor.py  resume_parser.py  resume_renderer.py
app/core/: config.py
app/models/: schemas.py
app/services/: keyword_extractor.py  resume_editor.py  resume_parser.py  resume_renderer.py
